Fix scrollbar goes outside chatbox contacts

--- a/src/app/core/pure-components/pure-chatbox/pure-chatbox.component.scss
+++ b/src/app/core/pure-components/pure-chatbox/pure-chatbox.component.scss
@@ -6,6 +6,8 @@
   bottom: 0px;
 
   .chatbox-contacts-wrapper {
+    overflow: auto;
+
     .chatbox-contacts {
       position: relative;
 
